--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@
 	height: 60px;
 }
 
-.add{
-	background-color: white !important;
-	color: black !important;
+#button-2{
+	background-color: white ;
+	color: black;
 	border: 1px solid black;
 }
 
-.btn-primary{
+#button-1{
 	background-color: blue !important;
 	
 }
